graphql api, dep. updates, tests
